--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -59,7 +59,8 @@
       "name": "Linux: g++ build and debug active file",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/bazel-bin/src/main/${fileBasenameNoExtension}",
+      // "program": "${workspaceFolder}/bazel-bin/src/main/${fileBasenameNoExtension}",
+      "program": "${workspaceFolder}/bazel-bin/tests/${fileBasenameNoExtension}",
       "args": [],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
